fixed share on fediverse dialog buttons spacing

--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -800,7 +800,7 @@ input, textarea, textarea.cactus-editor-textarea {
             flex-direction: row;
             justify-content: end;
             > * {
-                margin: 5px 2px;
+                margin: 5px 0 5px $margin;
                 display: block;
             }
         }
